# MVSHugeNumberCalculator

./: CMakeLists.txt  HugeInt.c
DataTypes/: DoublyLinkedList.h
IHMHugeNumber/: ScanHugeNumber.c  ScanHugeNumber.h  ShowHugeNumber.c  ShowHugeNumber.h
UseHugeNumber/Operator/: HugeFloatOperator.c  HugeFloatOperator.h  HugeIntOperator.c  HugeIntOperator.h  HugeUnsignedIntOperator.c  HugeUnsignedIntOperator.h
